Models, migrations and seeds complete

--- a/source/Gemfile
+++ b/source/Gemfile
@@ -1,4 +1,4 @@
-source :rubygems
+source 'https://rubygems.org'
 
 # PostgreSQL driver
 gem 'pg'
@@ -9,7 +9,7 @@ gem 'sinatra-contrib'
 
 # Use Thin for our web server
 gem 'thin'
-
+gem 'bcrypt'
 gem 'activesupport'
 gem 'activerecord'
 
@@ -19,8 +19,6 @@ gem 'pry'
 gem 'pry-nav'
 
 gem 'shotgun'
-
-gem 'bcrypt-ruby'
 
 group :test do
   gem 'faker'
